testsuite/poke.pkl/int-struct-type-diag-14.pk
/* { dg-do compile } */

deftype Foo =
  struct string /* { dg-error "integral" } */
  {
  };
